# Backupssh

./: .gitignore  CMakeLists.txt  README.md
include/: error.h  ssh.h
src/: main.c  ssh.c
